# GradientInputOptimization

./: README.md  main.py  pyproject.toml  test_gpu.py
data/: Y.npy  data_loader.py  generate_data.py  preprocessing.py  铜打钢.xlsx
doc/: 输入说明.md
models/: bp_network.pth  bp_network.py  bp_network_preprocessor.npz
output/evaluation/: evaluation_report.md
scripts/: evaluate.py  gradient_optimization.py  predict.py  train.py
